5.0.0 Added unit test to functions of all service classes - Performance improvements - Bugs fixed - Added getVehicleDefectsFromVehicleWithPagination and getVehicleDefectWithPagination