@@ -54,7 +54,7 @@ public class VehicleService {
 
     /**
      *
-     * Get vehicle vehicleId service
+     * Get vehicle from id service
      *
      * @param vehicleId - Vehicle id
      * @return VehicleDto - VehicleDto (info)
@@ -62,14 +62,14 @@ public class VehicleService {
     @CustomLogDebug
     @Transactional
     public VehicleDto getVehicleFromId(Long vehicleId){
-
         Vehicle vehicle = vehicleRepository.findByIdAndDeletedFalse(vehicleId);
         if (vehicle == null){
             throw new VehicleNotFoundException("Vehicle not found");
         }
         else {
+
             return VehicleDto.builder()
-                    .vehicleDefectDtos(vehicle.getVehicleDefect().stream().filter(vehicleDefect -> !vehicleDefect.isDeleted()).collect(Collectors.toList()).stream().map(vehicleDefect -> dtoConvert.vehicleDefectToVehicleDefectDto(vehicleDefect)).collect(Collectors.toList()))
+                    .vehicleDefectDtos(vehicle.getVehicleDefect().stream().filter(vehicleDefect -> !vehicleDefect.isDeleted()).toList().stream().map(vehicleDefect -> dtoConvert.vehicleDefectToVehicleDefectDto(vehicleDefect)).collect(Collectors.toList()))
                     .id(vehicle.getId())
                     .vehicleCode(vehicle.getCode())
                     .modelNo(vehicle.getModelNo())
@@ -140,7 +140,7 @@ public class VehicleService {
             sort = Sort.by(Sort.Direction.DESC, "id");
         }
         Pageable pageable = PageRequest.of(getVehicleParameters.getPage(), getVehicleParameters.getPageSize(), sort);
-        return vehicleRepository.findAllByCodeLikeAndModelNoLikeAndDeletedFalse("%"+ getVehicleParameters.getVehicleCode()+"%","%"+ getVehicleParameters.getModelNo()+"%",pageable).get().collect(Collectors.toList()).stream().map(vehicle -> dtoConvert.vehicleToVehicleDto(vehicle)).collect(Collectors.toList());
+        return vehicleRepository.findAllByCodeLikeAndModelNoLikeAndDeletedFalse("%"+ getVehicleParameters.getVehicleCode()+"%","%"+ getVehicleParameters.getModelNo()+"%",pageable).get().toList().stream().map(vehicle -> dtoConvert.vehicleToVehicleDto(vehicle)).collect(Collectors.toList());
     }
 
 }
